# Pokemon_Replica

./: .gitignore  All_Moves.cpp  Battle.cpp  Battle.h  CMakeLists.txt  Display.cpp  Display.h  Growth_Rate.cpp  Growth_Rate.h  Move.cpp  Move.h  Move.json  Move_Fetcher.py  Nature.cpp  Nature.h  Player.cpp  Player.h  Pokemon_Class.cpp  Pokemon_Class.h  Pokemon_Species.json  RawData_Fetcher.py  Raw_Data_Fetcher.py  Species.cpp  Species.h  Species.json  Species_Fetcher.py  Trainer.cpp  Trainer.h  Type.cpp  Type.h  Utils.hpp  main.cpp
Battle/: Battle.cpp  Battle.h
Data_Fetchers/: Move_Fetcher.py  Raw_Data_Fetcher.py  Species_Fetcher.py
Display/: Display.cpp  Display.h
Growth_Rate/: Growth_Rate.cpp  Growth_Rate.h
Item/: Item.cpp  Item.h
Item/Machine/: Machine.cpp  Machine.h
Move/: Move_Fetcher.py
Nature/: Nature.cpp  Nature.h
Pokemon Black2 Replica/Assets/: UniversalRenderPipelineGlobalSettings.asset
Pokemon Black2 Replica/Assets/Data/: Move.json  Species.json
Pokemon Black2 Replica/Assets/Palettes/: myPalette.prefab
Pokemon Black2 Replica/Assets/Player/: PlayerInputs.cs  PlayerInputs.inputactions  PlayerMovement.cs  PlayerScript.cs
Pokemon Black2 Replica/Assets/Pokemon/: GrowthRates.cs  Move.cs  Nature.cs  Pokemon.cs  Pokemon.prefab  Species.cs  Type.cs
Pokemon Black2 Replica/Assets/Scenes/: SampleScene.unity
Pokemon Black2 Replica/Assets/Sprites/: BW_Grass_Summer_0.asset
Pokemon Black2 Replica/Assets/StreamingAssets/Data/: Species.json
Pokemon Black2 Replica/Assets/Utils/: Log.cs
Pokemon Black2 Replica/ProjectSettings/: ProjectSettings.asset
Pokemon Black2 Replica/UserSettings/Layouts/: default-6000.dwlt
Pokemon_Class/: Pokemon_Class.cpp  Pokemon_Class.h
Pokemon_Species/: Charmander.cpp
Pokemon_Species/Charmander/: Charmander.cpp  Charmander.h
Species/: Species.cpp  Species.h  Species_Fetcher.py
Trainer/: Trainer.cpp  Trainer.h
Trainer/Player/: Player.cpp  Player.h
Type/: Type.h
Utils/: Utils.hpp
